--- a/navigator.css
+++ b/navigator.css
@@ -52,6 +52,10 @@ section .full {
   width: 100%;
 }
 
+section .half {
+  width: 50%;
+}
+
 section .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -62,8 +66,6 @@ section .container {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-flow: row;
-      flex-flow: row;
 }
 
 section.in {
