--- a/navigator.scss
+++ b/navigator.scss
@@ -50,11 +50,14 @@ section {
         width: 100%;
     }
 
+    .half {
+        width: 50%;
+    }
+
     .container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        flex-flow: row;
     }
 
     &.in {
